--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="js/jquery.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Calculator</title>  
 </head>
 <body>
-  <h1>Calculator</h1>
-  <script src="js/scripts.js"></script>
+  <div class="container">
+    <h1>Calculator</h1>
+    <div class="row">
+      <div class="col-3">
+        <form id="add">
+          <div class="form-group">
+            <label for="add1">1st number:</label>
+            <input id="add1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="add2">2nd number:</label>
+            <input id="add2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn btn-primary">Add!</button>
+        </form>
+        <div id="outputAdd">
+        </div>
+      </div>
+      
+      <div class="col-3">
+        <form id="subtract">
+          <div class="form-group">
+            <label for="sub1">1st number:</label>
+            <input id="sub1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="sub2">2nd number:</label>
+            <input id="sub2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn btn-primary">Subtract!</button>
+        </form>
+        <div id="outputSub">
+        </div>
+      </div>
+
+      <div class="col-3">
+        <form id="multiply">
+          <div class="form-group">
+            <label for="multi1">1st number:</label>
+            <input id="multi1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="multi2">2nd number:</label>
+            <input id="multi2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn btn-primary">Multiply!</button>
+        </form>
+        <div id="outputMult">
+        </div>
+      </div>
+
+      <div class="col-3">
+        <form id="divide">
+          <div class="form-group">
+            <label for="div1">1st number:</label>
+            <input id="div1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="div2">2nd number:</label>
+            <input id="div2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn btn-primary">Divide!</button>
+        </form>
+        <div id="outputDiv">
+        </div>
+      </div>
+    </div>
+    
+  </div>
 </body>
 </html>
